--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prestart": "npm install",
     "watch": "forever -w server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
