--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "scripts": {
     "prestart": "npm install",
-    "watch": "forever -w server.js",
+    "start": "forever -w server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
