--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "forever -w server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "forever server.js",
+    "watch": "forever -w server.js"
   },
   "author": "",
   "license": "ISC",
