--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "prestart": "npm install",
     "start": "forever server.js",
-    "watch": "forever -w server.js"
+    "watch": "forever -w server.js",
+    "vercel-build": "node ./build.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,10 @@
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
-    "koa2-cors": "^2.0.6"
+    "koa2-cors": "^2.0.6",
+    "vercel": "^32.2.4"
+  },
+  "devDependencies": {
+    "@vercel/node": "^3.0.5"
   }
 }
