--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
-    "node": "18.x"
+    "node": "18"
   },
   "scripts": {
-    "prestart": "npm install",
-    "start": "forever server.js",
-    "watch": "forever -w server.js",
-    "vercel-build": "node ./build.js"
+    "start": "node server.js",
+    "watch": "forever -w server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +17,6 @@
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
-    "koa2-cors": "^2.0.6",
-    "vercel": "^32.2.4"
-  },
-  "devDependencies": {
-    "@vercel/node": "^3.0.5"
+    "koa2-cors": "^2.0.6"
   }
 }
